--- a/video_generation_demo.ipynb
+++ b/video_generation_demo.ipynb
@@ -45,14 +45,13 @@
      "output_type": "stream",
      "text": [
       "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  2.02it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:03<00:00,  1.75s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The latent dimmension channes is 16\n",
       "The start sigmas and end sigmas of each stage is Start: {0: 1.0, 1: 0.8002399489209289, 2: 0.5007496155411024}, End: {0: 0.6669999957084656, 1: 0.33399999141693115, 2: 0.0}, Ori_start: {0: 1.0, 1: 0.6669999957084656, 2: 0.33399999141693115}\n"
      ]
     }
@@ -66,7 +65,7 @@
     "model_path = \"/mnt/sda1/saksham/TI2AV/pyramid/\"  # The downloaded checkpoint dir\n",
     "model_dtype = 'bf16'\n",
     "\n",
-    "device_id = 0\n",
+    "device_id = 3\n",
     "torch.cuda.set_device(device_id)\n",
     "\n",
     "model = PyramidDiTForVideoGeneration(\n",
@@ -135,17 +134,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16/16 [01:50<00:00,  6.93s/it]\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls=\"\" name=\"media\" data-fullscreen-container=\"true\" width=\"70%\">\n",
+       "    <source src=\"./text_to_video_sample.mp4\" type=\"video/mp4\">\n",
+       "    </video>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prompt = \"A movie trailer featuring the adventures of the 30 year old space man wearing a red wool knitted motorcycle helmet, blue sky, salt desert, cinematic style, shot on 35mm film, vivid colors\"\n",
-    "\n",
+    "prompt = \"A person playing violin fiddle in the dark\"\n",
+    "# prompt ='playing violin fiddle'\n",
     "# used for 384p model variant\n",
-    "# width = 640\n",
-    "# height = 384\n",
+    "width = 640\n",
+    "height = 384\n",
     "\n",
     "# used for 768p model variant\n",
-    "width = 1280\n",
-    "height = 768\n",
+    "# width = 1280\n",
+    "# height = 768\n",
     "\n",
     "temp = 16   # temp in [1, 31] <=> frame in [1, 241] <=> duration in [0, 10s]\n",
     "# Noting that, for the 384p version, only supports maximum 5s generation (temp = 16)\n",
