--- a/video_generation_demo_orig.ipynb
+++ b/video_generation_demo_orig.ipynb
@@ -45,7 +45,7 @@
      "output_type": "stream",
      "text": [
       "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.22s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:03<00:00,  1.75s/it]\n"
      ]
     },
     {
@@ -64,7 +64,6 @@
     "\n",
     "model_path = \"/mnt/sda1/saksham/TI2AV/pyramid/\"  # The downloaded checkpoint dir\n",
     "model_dtype = 'bf16'\n",
-    "new_wts='/mnt/sda1/saksham/TI2AV/ckpts-pyramid-full/checkpoint-40000/pytorch_model_fsdp.bin'\n",
     "\n",
     "device_id = 1\n",
     "torch.cuda.set_device(device_id)\n",
@@ -75,8 +74,6 @@
     "    model_name=model_name,\n",
     "    model_variant=variant,\n",
     ")\n",
-    "\n",
-    "# model.dit.load_state_dict(torch.load(new_wts, map_location=\"cpu\"))\n",
     "\n",
     "model.vae.to(\"cuda\")\n",
     "model.dit.to(\"cuda\")\n",
@@ -126,15 +123,35 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Text-to-Video"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16/16 [01:49<00:00,  6.86s/it]\n",
+      "100%|██████████| 16/16 [01:50<00:00,  6.93s/it]\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
@@ -153,27 +170,23 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prompt = \"A person passionately playing a violin fiddle under dim, moody lighting, with shadows dancing across their focused expression. The soft glow highlights the polished wood of the instrument, while the surrounding darkness adds a dramatic, intimate atmosphere to the performance.\"\n",
+    "prompt = \"A person playing violin fiddle in the dark\"\n",
     "# prompt ='playing violin fiddle'\n",
     "# used for 384p model variant\n",
     "width = 640\n",
     "height = 384\n",
-    "\n",
-    "# width = 256\n",
-    "# height = 256\n",
     "\n",
     "# used for 768p model variant\n",
     "# width = 1280\n",
     "# height = 768\n",
     "\n",
     "temp = 16   # temp in [1, 31] <=> frame in [1, 241] <=> duration in [0, 10s]\n",
-    "FPS = 24\n",
     "# Noting that, for the 384p version, only supports maximum 5s generation (temp = 16)\n",
     "\n",
     "with torch.no_grad(), torch.cuda.amp.autocast(enabled=True if model_dtype != 'fp32' else False, dtype=torch_dtype):\n",
@@ -190,7 +203,7 @@
     "        save_memory=True,           # If you have enough GPU memory, set it to `False` to improve vae decoding speed\n",
     "    )\n",
     "\n",
-    "export_to_video(frames, \"./text_to_video_sample.mp4\", fps=FPS)\n",
+    "export_to_video(frames, \"./text_to_video_sample.mp4\", fps=24)\n",
     "show_video(None, \"./text_to_video_sample.mp4\", \"70%\")"
    ]
   },
