add visualization scripts

--- a/video_generation_demo.ipynb
+++ b/video_generation_demo.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
      "output_type": "stream",
      "text": [
       "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:39<00:00, 19.75s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.32s/it]\n"
      ]
     },
     {
@@ -64,9 +64,9 @@
     "\n",
     "model_path = \"/mnt/sda1/saksham/TI2AV/pyramid/\"  # The downloaded checkpoint dir\n",
     "model_dtype = 'bf16'\n",
-    "new_wts='/mnt/sda1/saksham/TI2AV/ckpts-pyramid-temp-ar/checkpoint-34000/pytorch_model_fsdp.bin'\n",
+    "new_wts='/mnt/sda1/saksham/TI2AV/ckpts-pyramid-temp-ar/checkpoint-40000/pytorch_model_fsdp.bin'\n",
     "\n",
-    "device_id = 0\n",
+    "device_id = 2\n",
     "torch.cuda.set_device(device_id)\n",
     "\n",
     "model = PyramidDiTForVideoGeneration(\n",
@@ -76,7 +76,7 @@
     "    model_variant=variant,\n",
     ")\n",
     "\n",
-    "# model.dit.load_state_dict(torch.load(new_wts, map_location=\"cpu\"))\n",
+    "model.dit.load_state_dict(torch.load(new_wts, map_location=\"cpu\"))\n",
     "\n",
     "model.vae.to(\"cuda\")\n",
     "model.dit.to(\"cuda\")\n",
@@ -126,49 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:25<00:00,  6.50s/it]\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls=\"\" name=\"media\" data-fullscreen-container=\"true\" width=\"70%\">\n",
-       "    <source src=\"./text_to_video_sample.mp4\" type=\"video/mp4\">\n",
-       "    </video>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# prompt = \"A man with light brown hair, dressed in a dark turtleneck and black pants, is seen playing a cello with intense concentration. He is seated, with his right hand skillfully navigating the strings and his left hand supporting the bow. An orchestra, including musicians with violins and a double bass, is visible in the background, indicating a live performance. The warm stage lighting enhances the mood of the event. Over time, the man's attire is described as a grey turtleneck and black pants, and the setting is revealed to be an outdoor concert with a microphone stand and a bare tree structure.\"\n",
     "prompt = \"A hot girl is dancing in a club with a lot of people around her. She is wearing a red dress and has long hair.\"\n",
@@ -216,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -234,19 +194,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:11<00:00,  3.93s/it]\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "100%|██████████| 3/3 [00:12<00:00,  4.14s/it]\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
@@ -255,17 +203,11 @@
     },
     {
      "data": {
-      "text/html": [
-       "<video controls=\"\" name=\"media\" data-fullscreen-container=\"true\" width=\"70%\">\n",
-       "    <source src=\"./image_to_video_sample.mp4\" type=\"video/mp4\">\n",
-       "    </video>\n",
-       "    "
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "'./image_to_video_sample.mp4'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,10 +222,14 @@
     "# temp = 16\n",
     "# FPS = 24\n",
     "\n",
+    "CFG = 20.0\n",
+    "V_CFG = 1.0\n",
+    "\n",
     "width = 256\n",
     "height = 256\n",
     "temp = 4\n",
     "FPS = 8\n",
+    "\n",
     "\n",
     "image = image.resize((width, height))\n",
     "image = resize_crop_image(image, width, height)\n",
@@ -298,13 +244,38 @@
     "        input_image=image,\n",
     "        num_inference_steps=[10, 10, 10],\n",
     "        temp=temp,\n",
-    "        guidance_scale=7.0,\n",
-    "        video_guidance_scale=4.0,\n",
+    "        guidance_scale=CFG,\n",
+    "        video_guidance_scale=V_CFG,\n",
     "        output_type=\"pil\",\n",
     "        save_memory=True,         # If you have enough GPU memory, set it to `False` to improve vae decoding speed\n",
     "    )\n",
     "\n",
-    "export_to_video(frames, \"./image_to_video_sample.mp4\", fps=FPS)\n",
+    "export_to_video(frames, \"./image_to_video_sample.mp4\", fps=FPS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video controls=\"\" name=\"media\" data-fullscreen-container=\"true\" width=\"70%\">\n",
+       "    <source src=\"./image_to_video_sample.mp4\" type=\"video/mp4\">\n",
+       "    </video>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "show_video(None, \"./image_to_video_sample.mp4\", \"70%\")"
    ]
   },
